# python-django-developer-project-52

./: README.md  manage.py  pyproject.toml
task_manager/: asgi.py  settings.py  urls.py  wsgi.py
